--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="skill-row">
             <img class="graphic_design_img" src="web-design.png" alt="Graphic-design-img">
             <h3>Grahic Design</h3>
-            <p>Versed in design work using CorelDraw and adobe photoshop. Having worked with printing press for some years before gaining admission into higher intistution of learning.</p>
+            <p>Versed in design work using CorelDraw and adobe photoshop. Having worked with printing press for some years before gaining admission into higher institution of learning.</p>
           </div>
           <div class="skill-row">
             <img class="driving_skill" src="hands.png" alt="Hand_onwheel">
