--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
       <a href="https://linkedin.com/in/muhammed-lucas-975a16173"><img class="thirdContainer-img" src="linkedin.png"></a>
       <p>&copy Lucasinho 2022</p>
     </div>
+    <a href="product-preview-card.html>View our product</a>
   </body>
 </html>
